Add style link,h1,instructions,quick-start p, github repo link
Link to style.css. Add h1. Put quick-start instruction in p tags. Write instructions. Link to github repo.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Budget</title>
 </head>
 <body>
-    call budgetResults(yrSalary, monthlyExpenses) in console
-</body>
-</html>
+    <h1>Budget</h1>
+    <p>call budgetResults(yrSalary, monthlyExpenses) in console</p>
+    <h2>How To Use</h2>
+    <ol>
+        <li>Open the index.html file in a web browser.</li>
+        <li>Navigate to the web browser developer tools.</li>
+        <li>Find the JavaScript console.</li>
+        <li>In the console of the opened index.html file, call the budgetResults function by writing budgetResults(yrSalary, monthlyExpenses)</li>
+        <li>Replace the function parameters yrSalary and monthlyExpenses with year income number and monthly expenses number respectively.</li>
+        <li>Press the enter key on your keyboard.</li>
+    </ol>
+    <p>After following the above steps, income-taxed budget results should print in the console.</p>
+    <a href="https://github.com/stokedDev/budget-app" target="_blank">Learn more at https://github.com/stokedDev/budget-app</a>
