Match index.html to README.md

--- a/index.html
+++ b/index.html
@@ -36,3 +36,4 @@ For now, it just returns results for income funds of 37K to 52K, 52K to 66K, and
         <li>Press the enter key on your keyboard to print taxed income budget results in the console.</li>
     </ol>
     <a class="github-repo-link" href="https://github.com/stokedDev/budget-app" target="_blank">Visit this apps GitHub repository at https://github.com/stokedDev/budget-app</a>
+</body>
