--- a/index.html
+++ b/index.html
@@ -37,3 +37,4 @@ For now, it just returns results for income funds of 37K to 52K, 52K to 66K, and
     </ol>
     <a class="github-repo-link" href="https://github.com/stokedDev/budget-app" target="_blank">Visit this apps GitHub repository at https://github.com/stokedDev/budget-app</a>
 </body>
+</html>
