Update Information Returned In Console list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ For now, it just returns results for income funds of 37K to 52K, 52K to 66K, and
     <li>50% for needs</li>
     <li>30% for wants</li>
     <li>20% for savings</li>
-    <li>sum of 50% needs and 30% wants minus monthly expenses(and the same sum minus monthly expenses not times 12(described as "monthly funMoney estimated to be about")).</li>
+    <li>sum of 50% needs and 30% wants minus monthly expenses(and the same sum minus monthly expenses not times 12)</li>
 </ol>
     <h2 id="how-to-use">How To Use</h2>
     <ol>
