--- a/index.html
+++ b/index.html
@@ -3,29 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This console log budget app for Californians informs of 50% needs, 30% wants, and 20% savings.">
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <title>Budget</title>
 </head>
 <body>
-    <h1>Budget</h1>
-    <h2>Quick-start Instruction</h2>
-    <p class="quick-start-instruction">Call budgetResults(yrIncome, monthlyExpenses) in console.</p>
-    <h3 class="direction-to-how-to-use">Find the "How To Use" section below for full instructions.</h3>
-    <a class="full-instructions-link" href="#how-to-use">Click me to go to "How To Use" for full instructions.</a>
-    <h2>About</h2>
-    <p class="about-p">This console log budget app informs of 50% needs, 30% wants, and 20% savings. <br>
-Currently, it is just for residents of California who are single or married filing separately.<br>
-For now, it just returns results for income funds of $38,960 to $54,081, $54,082 to $68,350, and $68,351 to $349,137.</p>
-<h2>Information Returned In Console</h2>
-<ol>
-    <li>year salary</li>
-    <li>monthly expenses</li>
-    <li>50% for needs</li>
-    <li>30% for wants</li>
-    <li>20% for savings</li>
-    <li>sum of 50% needs and 30% wants minus monthly expenses(and the same sum minus monthly expenses not times 12)</li>
-</ol>
+    <section class="intro-section">
+        <h1>Budget</h1>
+        <h2>Quick-start Instruction</h2>
+        <p class="quick-start-instruction">Call budgetResults(yrIncome, monthlyExpenses) in console.</p>
+        <h3 class="direction-to-how-to-use">Find the "How To Use" section below for full instructions.</h3>
+        <a class="full-instructions-link" href="#how-to-use">Click me to go to "How To Use" for full instructions.</a>
+    </section>
+    <section class="about-section">
+        <h2>About</h2>
+        <p class="about-p">This console log budget app informs of 50% needs, 30% wants, and 20% savings. <br>
+    Currently, it is just for residents of California who are single or married filing separately.<br>
+    For now, it just returns results for income funds of $38,960 to $54,081, $54,082 to $68,350, and $68,351 to $349,137.</p>
+    </section>
+    <section class="information-returned-in-console-section">
+        <h2>Information Returned In Console</h2>
+        <ol>
+            <li>year salary</li>
+            <li>monthly expenses</li>
+            <li>50% for needs</li>
+            <li>30% for wants</li>
+            <li>20% for savings</li>
+            <li>sum of 50% needs and 30% wants minus monthly expenses(and the same sum minus monthly expenses not times 12)</li>
+        </ol>
+    </section>
+<section class="how-to-use-section">
     <h2 id="how-to-use">How To Use</h2>
     <ol>
         <li>Open the index.html file in a web browser.</li>
@@ -36,5 +44,7 @@ For now, it just returns results for income funds of $38,960 to $54,081, $54,082
         <li>Press the enter key on your keyboard to print taxed income budget results in the console.</li>
     </ol>
     <a class="github-repo-link" href="https://github.com/stokedDev/budget-app" target="_blank">Visit this apps GitHub repository at https://github.com/stokedDev/budget-app</a>
+</section>
+
 </body>
 </html>
