Update Quick-start Instructions
Clarify requirement for argument type

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="intro-section">
         <h1>Budget</h1>
         <h2>Quick-start Instruction</h2>
-        <p class="quick-start-instruction">Call budgetResults(yrIncome, monthlyExpenses) in console.</p>
+        <p class="quick-start-instruction">Call budgetResults(yrIncome, monthlyExpenses) in console with numbers as arguments.</p>
         <h3 class="direction-to-how-to-use">Find the "How To Use" section below for full instructions.</h3>
         <a class="full-instructions-link" href="#how-to-use">Click me to go to "How To Use" for full instructions.</a>
     </section>
